--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "InstaClone",
   "version": "1.0.0",
   "description": "nodeJS, GraphQL, React, ReactNative, Prisma, Apollo",
-  "repository": "https://github.com/seows2/Ins-Clone",
+  "repository": "https://github.com/seows2/InstaClone",
   "author": "Seo",
   "license": "MIT",
   "dependencies": {
@@ -11,7 +11,10 @@
     "@babel/preset-env": "^7.8.6",
     "babel-node": "^0.0.1-security",
     "dotenv": "^8.2.0",
-    "graphql-yoga": "^1.18.3"
+    "graphql-tools": "^4.0.7",
+    "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.6",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
