--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate"
   }
 }
