--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.6",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.4",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
